Fix stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,7 @@ body {
 }
 
 .media-corner {
+    z-index: 100;
     width: 26px;
     height: 26px;
     background-color: white;
@@ -152,4 +153,16 @@ body {
 
 .upload-img-main {
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.30);
+    max-height: 500px;
+    max-width: 100%;
+}
+
+.media-thumbnail {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.30);
 }
